src/App.css
.ant-tooltip-inner {
  font-size: 12px;
  min-height: 24px;
  padding: 3px 8px;
  background-color: #464a51;
}

.ant-tooltip-arrow::before {
  background-color: #464a51;
}

.ant-menu-horizontal {
  line-height: 64px !important;
  border: none !important;
}

.ant-layout-header {
  line-height: inherit;
}

.ant-list-item {
  padding: 8px 0;
}

.ant-col {
  flex-grow: 1;
}

.ant-table-tbody
  > tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
  > td {
  background: #fafafa;
}

.ant-table-filter-column-title {
  padding: 8px;
}

.ant-table-pagination {
  padding-right: 16px;
}

.color-important {
  font-weight: bold;
}

.color-normal {
  color: inherit !important;
}

.color-muted {
  color: gray !important;
}

a:hover {
  text-decoration: underline;
}

.ant-table-footer {
  background: #fff;
  text-align: center;
}

.ant-table-placeholder {
  border: none;
}

.ant-empty-normal {
  margin: 0;
}

.ant-statistic-title {
  margin-bottom: -3px;
}

.ant-statistic + .ant-statistic {
  margin-top: 6px;
}

.sticky {
  position: sticky;
  top: 0;
}

.ant-descriptions-item-content {
  width: 90%;
}

.ant-descriptions-item-content .ant-skeleton-title,
.price-list .ant-skeleton-title {
  margin: 0;
}

.ant-descriptions-item-content .ant-skeleton + .ant-skeleton {
  margin-top: 10px;
}

.container {
  display: flex;
  white-space: nowrap;
  overflow: hidden;
}

.part1,
.part2 {
  overflow: hidden;
  display: inline-block;
  text-overflow: ellipsis;
  flex-shrink: 1;
}

.part2 {
  direction: rtl;
  margin-left: -30px;
}

.end {
  flex-grow: 1;
}

.mid {
  width: 30px;
  flex-shrink: 10;
}

.isloading-skeleton-width {
  width: 50%;
}

.ant-skeleton-title {
  margin-top: 11px;
  margin-bottom: 10px;
}

.truncate {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.break-word {
  word-break: break-word;
}

.ant-descriptions-item-label {
  white-space: nowrap;
}

.ant-layout-content {
  padding: 12px;
}

.app-header {
  padding: 0 12px;
}

.app-sub-header {
  padding: 3px 12px;
}

.cps-container {
  text-align: left;
  margin-bottom: 3px;
}

@media (min-width: 768px) {
  .app-header {
    padding: 0 20px;
  }

  .ant-layout-content {
    padding: 20px;
  }

  .app-sub-header {
    padding: 3px 20px;
  }

  .cps-container {
    text-align: center;
  }

  .ant-timeline .right .ant-timeline-item-content {
    left: inherit !important;
    width: calc(50% - 12px) !important;
    margin: 0 !important;
    text-align: right !important;
  }

  .ant-timeline .left .ant-timeline-item-content {
    left: calc(50% - 4px) !important;
    width: calc(50% - 14px) !important;
    margin: 0 0 0 18px !important;
    text-align: left !important;
  }

  .ant-timeline .first-row {
    display: flex;
    align-items: center;
  }

  .ant-timeline .left .first-row {
    justify-content: flex-start;
  }

  .ant-timeline .right .first-row {
    justify-content: flex-end;
  }

  .ant-timeline .left .timeline-tag {
    order: 1;
  }

  .ant-timeline .right .timeline-tag {
    order: 3;
  }

  .ant-timeline .left .timeline-timeago {
    order: 3;
  }

  .ant-timeline .right .timeline-timeago {
    order: 1;
  }

  .ant-timeline .timeline-amount {
    order: 2;
  }
}

.ant-timeline-item-head {
  background-color: transparent;
}

.ant-timeline .timeline-tag {
  text-transform: capitalize;
  margin: 0 !important;
}

.ant-timeline .timeline-amount {
  margin: 0 6px;
}

.ant-timeline .timeline-timeago {
  font-size: 12px;
  line-height: 21px;
}

.ant-timeline {
  padding: 10px 0;
}

.ant-timeline-item-last {
  padding-bottom: 0;
}

.fadein {
  animation: fadein 0.25s;
}

.gradient-container {
  position: relative;
}

.bottom-gradient {
  position: absolute;
  width: 100%;
  height: 50px;
  bottom: 0;
  left: 0;
  background: linear-gradient(rgba(255, 255, 255, 0), #fff);
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* @TODO remove this for flex */
.clearfix {
  overflow: auto;
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.cryptocurrenty-list-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 6px 0;
  margin-top: -1px;
}

.transaction-card .ant-spin-nested-loading {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(255, 255, 255, 0.2);
}

.transaction-card .ant-row:not(:last-child) {
  border-bottom: solid 1px #f0f0f0;
}

.transaction-card .row-pagination {
  padding-top: 6px;
}

.ant-tag.tag-send {
  color: #e04576;
  border-color: #ffa2bf;
  background-color: #fff0f2 !important;
}

.ant-popover-inner-content {
  padding: 12px 0;
}

.ant-slider-mark-text {
  white-space: nowrap;
}

